--- a/styles/general/base.css
+++ b/styles/general/base.css
@@ -18,9 +18,4 @@ main {
   width: 100%;
 }
 
-.movieInfo {
-  border: 1px solid red;
-  height: 100%;
-}
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=base.css.map */
