--- a/styles/general/base.css
+++ b/styles/general/base.css
@@ -11,11 +11,24 @@
 body {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 main {
   height: 100%;
-  width: 100%;
+  display: inline-flex;
+  margin: 0 auto;
+}
+
+li {
+  list-style: none;
+}
+
+h1 {
+  text-align: center;
+  padding: 1rem;
 }
 
 /*# sourceMappingURL=base.css.map */
