--- a/styles/general/movieinfo.css
+++ b/styles/general/movieinfo.css
@@ -1,6 +1,14 @@
 .movieInfo {
-  border: 1px solid red;
+  padding-top: 1rem;
+  width: 100%;
+  max-width: 1200px;
   height: 100%;
+}
+.movieInfo #movieImage {
+  object-fit: contain;
+  width: 100%;
+  max-width: 1920px;
+  padding-right: 1rem;
 }
 
 /*# sourceMappingURL=movieinfo.css.map */
