--- a/styles/main.css
+++ b/styles/main.css
@@ -11,16 +11,52 @@
 body {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 main {
   height: 100%;
-  width: 100%;
+  display: inline-flex;
+  margin: 0 auto;
+}
+
+li {
+  list-style: none;
+}
+
+h1 {
+  text-align: center;
+  padding: 1rem;
 }
 
 .movieInfo {
-  border: 1px solid red;
+  padding-top: 1rem;
+  width: 100%;
+  max-width: 1200px;
   height: 100%;
+}
+.movieInfo #movieImage {
+  object-fit: contain;
+  width: 100%;
+  max-width: 1920px;
+  padding-right: 1rem;
+}
+
+#movieList {
+  max-width: 250px;
+  margin: 1rem;
+}
+#movieList li {
+  border-top: 1px solid black;
+  padding: 0.5rem 0;
+}
+#movieList li:last-child {
+  border-bottom: 1px solid black;
+}
+#movieList li:hover {
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=main.css.map */
