--- a/src/scss/general/base.scss
+++ b/src/scss/general/base.scss
@@ -11,9 +11,22 @@
 body {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 main {
   height: 100%;
-  width: 100%;
+  display: inline-flex;
+  margin: 0 auto;
+}
+
+li {
+  list-style: none;
+}
+
+h1 {
+  text-align: center;
+  padding: 1rem;
 }
