--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -3,12 +3,18 @@
   margin: 1rem;
   li {
     border-top: 1px solid black;
-    padding: 0.5rem 0;
+    padding: 0.5rem;
   }
   li:last-child {
     border-bottom: 1px solid black;
   }
   li:hover {
     cursor: pointer;
+  }
+  .active {
+    background-color: #79bbdd;
+  }
+  .hover {
+    background-color: #ccc;
   }
 }
