--- a/styles/main.css
+++ b/styles/main.css
@@ -50,13 +50,19 @@ h1 {
 }
 #movieList li {
   border-top: 1px solid black;
-  padding: 0.5rem 0;
+  padding: 0.5rem;
 }
 #movieList li:last-child {
   border-bottom: 1px solid black;
 }
 #movieList li:hover {
   cursor: pointer;
+}
+#movieList .active {
+  background-color: #79bbdd;
+}
+#movieList .hover {
+  background-color: #ccc;
 }
 
 /*# sourceMappingURL=main.css.map */
