--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -2,11 +2,11 @@
   max-width: 250px;
   margin: 1rem;
   li {
-    border-top: 1px solid black;
+    border-top: 1px solid #111;
     padding: 0.5rem;
   }
   li:last-child {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #111;
   }
   li:hover {
     cursor: pointer;
