--- a/styles/general/movieinfo.css
+++ b/styles/general/movieinfo.css
@@ -1,10 +1,10 @@
-.movieInfo {
+#movieInfo {
   padding-top: 1rem;
   width: 100%;
   max-width: 1200px;
   height: 100%;
 }
-.movieInfo #movieImage {
+#movieInfo #movieImage {
   object-fit: contain;
   width: 100%;
   max-width: 1920px;
