--- a/styles/general/base.css
+++ b/styles/general/base.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-family: futura, helvetica, arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -28,7 +28,19 @@ li {
 
 h1 {
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
+  font-family: "Crimson Text", serif;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid 2px #222;
+  max-width: min-content;
+  align-self: center;
+}
+h1 .smallHeader {
+  font-size: 1.4rem;
+  padding: 0 1rem;
 }
 
 /*# sourceMappingURL=base.css.map */
