--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-family: futura, helvetica, arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -28,11 +28,23 @@ li {
 
 h1 {
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
+  font-family: "Crimson Text", serif;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid 2px #222;
+  max-width: min-content;
+  align-self: center;
+}
+h1 .smallHeader {
+  font-size: 1.4rem;
+  padding: 0 1rem;
 }
 
 #movieInfo {
-  padding-top: 1rem;
+  padding-top: 3rem;
   width: 100%;
   max-width: 1200px;
   height: 100%;
@@ -47,6 +59,7 @@ h1 {
 #movieList {
   max-width: 250px;
   margin: 1rem;
+  padding-top: 2rem;
 }
 #movieList li {
   border-top: 1px solid #111;
