--- a/src/scss/general/base.scss
+++ b/src/scss/general/base.scss
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-family: futura, helvetica, arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 body {
@@ -28,5 +28,17 @@ li {
 
 h1 {
   text-align: center;
-  padding: 1rem;
+  padding: 1rem 1rem 0 1rem;
+  font-family: "Crimson Text", serif;
+  text-transform: uppercase;
+  .smallHeader {
+    font-size: 1.4rem;
+    padding: 0 1rem;
+  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: solid 2px #222;
+  max-width: min-content;
+  align-self: center;
 }
