--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,6 +1,7 @@
 #movieList {
   max-width: 250px;
   margin: 1rem;
+  padding-top: 2rem;
   li {
     border-top: 1px solid #111;
     padding: 0.5rem;
