--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,7 +1,11 @@
+#menu {
+  position: absolute;
+  left: 0;
+  top: calc(3rem + 62px);
+}
 #movieList {
   max-width: 250px;
-  margin: 1rem;
-  padding-top: 2rem;
+  margin: 0.5rem 1rem;
   li {
     border-top: 1px solid #111;
     padding: 0.5rem;
@@ -17,5 +21,22 @@
   }
   .hover {
     background-color: #ccc;
+  }
+}
+
+#sort {
+  margin-left: 1rem;
+  li {
+    display: inline;
+    padding: 0 0.5rem;
+    border: 1px solid transparent;
+  }
+  .sortButton:hover {
+    cursor: pointer;
+    background-color: #ccc;
+    border: 1px solid black;
+  }
+  .activeSort {
+    color: black;
   }
 }
