--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,8 @@ main {
   height: 100%;
   display: inline-flex;
   margin: 0 auto;
+  position: relative;
+  margin-left: 282px;
 }
 
 li {
@@ -56,10 +58,15 @@ h1 .smallHeader {
   padding-right: 1rem;
 }
 
+#menu {
+  position: absolute;
+  left: 0;
+  top: calc(3rem + 62px);
+}
+
 #movieList {
   max-width: 250px;
-  margin: 1rem;
-  padding-top: 2rem;
+  margin: 0.5rem 1rem;
 }
 #movieList li {
   border-top: 1px solid #111;
@@ -76,6 +83,23 @@ h1 .smallHeader {
 }
 #movieList .hover {
   background-color: #ccc;
+}
+
+#sort {
+  margin-left: 1rem;
+}
+#sort li {
+  display: inline;
+  padding: 0 0.5rem;
+  border: 1px solid transparent;
+}
+#sort .sortButton:hover {
+  cursor: pointer;
+  background-color: #ccc;
+  border: 1px solid black;
+}
+#sort .activeSort {
+  color: black;
 }
 
 /*# sourceMappingURL=main.css.map */
