--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,7 +1,12 @@
+#menu {
+  position: absolute;
+  left: 0;
+  top: calc(3rem + 62px);
+}
+
 #movieList {
   max-width: 250px;
-  margin: 1rem;
-  padding-top: 2rem;
+  margin: 0.5rem 1rem;
 }
 #movieList li {
   border-top: 1px solid #111;
@@ -18,6 +23,23 @@
 }
 #movieList .hover {
   background-color: #ccc;
+}
+
+#sort {
+  margin-left: 1rem;
+}
+#sort li {
+  display: inline;
+  padding: 0 0.5rem;
+  border: 1px solid transparent;
+}
+#sort .sortButton:hover {
+  cursor: pointer;
+  background-color: #ccc;
+  border: 1px solid black;
+}
+#sort .activeSort {
+  color: black;
 }
 
 /*# sourceMappingURL=menu.css.map */
